# fictional-giggle

./: .gitignore  CMakeLists.txt  main.cpp  pidname.h  process_list_model.cpp  process_list_model.h  rect_area.cpp  rect_area.h  scrabvision.cpp  scrabvision.h  scrabvision.ui  windowutil.h
